# ESP32_framwork

./: CMakeLists.txt  LICENSE  partitions.csv  sdkconfig  sdkconfig.old
components/easyio_lib/: CMakeLists.txt
components/easyio_lib/include/: easyio.h  key.h  ledc_pwm.h
components/easyio_lib/src/: ledc_pwm.c
components/muggle_lib/: CMakeLists.txt
components/muggle_lib/include/: DHT11.h  delay.h  oled.h  oled_font.h  tcp_client.h
components/muggle_lib/src/: DHT11.c  delay.c  oled.c  tcp_client.c
main/: CMakeLists.txt  app_main.c  blufi_example.c  blufi_example.h  tasks.c  tasks.h
